--- a/src/main/resources/fluent-dark.css
+++ b/src/main/resources/fluent-dark.css
@@ -117,10 +117,12 @@
 .scroll-pane,.list-view,.table-view,.tree-table-view,.html-editor{
     -fx-background-color:-ControlFillColorDisabledBrush;
     -fx-background-radius: 15, 15, 15, 15;
+    -fx-alignment: center;
 }
 
 .scroll-pane>.viewport {
     -fx-background-radius: 15, 15, 15, 15;
+    -fx-alignment: center;
 }
 
 .label:disabled,.radio-button:disabled,.slider:disabled,.scroll-bar:disabled,.scroll-pane:disabled,.progress-bar:disabled,.text-input:disabled,.list-view:disabled,.tree-view:disabled,.table-view:disabled,.tree-table-view:disabled,.titled-pane:disabled>.title,.spinner:disabled{
@@ -578,10 +580,18 @@ TextFlow>.hyperlink:hover,TextFlow>.hyperlink:armed,TextFlow>.hyperlink:hover:ar
 .scroll-bar:vertical>.thumb{
     -fx-background-color: #454545;-fx-background-insets:3
 }
-.scroll-bar:horizontal>.increment-button{-fx-padding:2 5 2 2}
-.scroll-bar:horizontal>.decrement-button{-fx-padding:2 2 2 5}
-.scroll-bar:vertical>.increment-button{-fx-padding:2 2 5 2}
-.scroll-bar:vertical>.decrement-button{-fx-padding:5 2 2 2}
+.scroll-bar:horizontal>.increment-button{
+    -fx-padding:2 5 2 2;
+}
+.scroll-bar:horizontal>.decrement-button{
+    -fx-padding:2 2 2 5
+}
+.scroll-bar:vertical>.increment-button{
+    -fx-padding:2 2 5 2
+}
+.scroll-bar:vertical>.decrement-button{
+    -fx-padding:5 2 2 2
+}
 .scroll-bar>.increment-button>.increment-arrow,.scroll-bar>.decrement-button>.decrement-arrow{
     -fx-background-color: #454545
 }
